Fixed white space in intro

--- a/static/css/custom1.css
+++ b/static/css/custom1.css
@@ -1,30 +1,48 @@
 .flex-container {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-  }
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
 
 #team.flex-container div{
-    width: 300px;
-    height: 250px;
-    margin: 16px;
-    margin-top: 64px;
+  width: 300px;
+  height: 250px;
+  margin: 16px;
+  margin-top: 64px;
 }
 
 .flex-container-row{
-  flex-flow: row wrap;
+flex-flow: row wrap;
 }
 
 .flex-container-column{
-  flex-flow: column wrap;
+flex-flow: column wrap;
 }
 
 .box-relative{
-  position: relative;
+position: relative;
 }
 
 .box-absolute{
-  position: absolute;
-  bottom: 16px;
-  right: 0px;
+position: absolute;
+bottom: 16px;
+right: 0px;
+}
+
+#fh5co-intro{
+  padding: 0px;
+}
+
+.fh5co-person figure img{
+  height: 120px;
+  object-fit: cover;
+}
+
+.fh5co-text h2{
+  margin-top: 0.2em!important;
+  margin-bottom: 0.8em!important;
+}
+
+.fh5co-text{
+  line-height: 1.2!important;
 }
